k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: dev                # scoped to dev
  labels:
    app: node-app
spec:
  replicas: 1                   # only 1 replica in dev (save cost)
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: 037049058245.dkr.ecr.ap-south-1.amazonaws.com/k8s-node-app:v5.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"        # smaller in dev
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
