k8s/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
